
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.


MOD 0.9.5 beta 5 (rev 1743 - October 19, 2006)
====================================
* Removed duplicate english language entry manage_metatags_help (exists as metatag_notice) and corrected reference in manage_metatags.dynamic.php. (1743)
* Minor changes to login.html. (1738)
* Fixes a bug where an error 404 was served instead of (site_start) on an empty request. (1739)
* Security: Important! Fixes remote file inclusion vulnerability in index-ajax.php. (1724)
* Fix: Don't warn if config file is owner/group writable. Still warn if world-writable. (1721)
* [FS#571] Added permissions check to stop administrator from getting locked out of the settings page after new install or upgrade if the settings haven't been saved and a user without the right to the settings page is trying to log in at the same time. (1736)
* Remove error.js completely. Only functions correctly in IE, FF and Safari fail to display any js error information in the dialog. (1719)
* Minor tweak to ajax login page and tree nodes. (1713)
* Added ajax support to login page. (1712)
* Added manager_lockout_message to english.inc.php. (1712)
* Added support for allow_manager_access user setting. (1712)
* Added manager.lockout.inc.php and manager.lockout.html. (1712)
* Fixed warnings with undeclared arrays in save_user.processor.php. (1714)
* Added login.html to other themes. (1710)
* Separate manager login logic from content page (see login.html). (1709)
* Fix bug with tree and deleted documents. (1709)
* Fix session timeout bug when expanding nodes. (1709)
* Remove any remaining placeholders from output in new welcome.static.php. (1706)
* [FS#203] Added default publish permission value to system settings. (1702)
* Remove broken image icons from error.js (1703)
* Fix the 'Remove Locks' functionality. (1700)